4571.	[bug]		Out-of-tree builds of backtrace_test failed.

4570.	[cleanup]	named did not correctly fall back to the built-in
			initializing keys if the bind.keys file was present
			but empty. [RT #44531]

4569.	[func]		Store both local and remote addresses in dnstap
			logging, and modify dnstap-read output format to
			print them. [RT #43595]

4568.	[contrib]	Added a --with-bind option to the dnsperf configure
			script to specify BIND prefix path.

4567.	[port]		Call getprotobyname and getservbyname prior to calling
			chroot so that shared libraries get loaded. [RT #44537]

4566.	[func]		Query logging now includes the ECS option if one
			was included in the query. [RT #44476]

4565.	[cleanup]	The inline macro versions of isc_buffer_put*()
			did not implement automatic buffer reallocation.
			[RT #44216]

4564.	[maint]		Update the built in managed keys to include the
			upcoming root KSK. [RT #44579]

4563.	[bug]		Modified zones would occasionally fail to reload.
			[RT #39424]

4562.	[func]		Add additional memory statistics currently malloced
			and maxmalloced per memory context. [RT #43593]

4561.	[port]		Silence a warning in strict C99 compilers. [RT #44414]

4560.	[bug]		mdig: add -m option to enable memory debugging rather
			than having it on all the time. [RT #44509]

4559.	[bug]		openssl_link.c didn't compile if ISC_MEM_TRACKLINES
			was turned off.  [RT #44509]

4558.	[bug]		Synthesised CNAME before matching DNAME was still
			being cached when it should not have been.  [RT #44318]

4557.	[security]	Combining dns64 and rpz can result in dereferencing
			a NULL pointer (read).  (CVE-2017-3135) [RT#44434]

4556.	[bug]		Sending an EDNS Padding option using "dig
			+ednsopt" could cause a crash in dig. [RT #44462]

4555.	[func]		dig +ednsopt: EDNS options can now be specified by
			name in addition to numeric value. [RT #44461]

4554.	[bug]		Remove double unlock in dns_dispatchmgr_setudp.
			[RT #44336]
