@@ -21,7 +21,7 @@ options {
 	statistics-file "named.stats";
 	dnstap-identity "ns1";
 	dnstap-version "xxx";
-	dnstap-output file "dnstap.out";
+	dnstap-output file "dnstap.out" size 30k versions 10;
 	dnstap { all; };
 	send-cookie no;
 	require-server-cookie no;
