@@ -349,7 +349,7 @@ if [ -n "$PYTHON" ] ; then
 	$PYTHON -c "import yaml" && HAS_PYYAML=1
 fi
 
-if [ $HAS_PYYAML ] ; then
+if [ $HAS_PYYAML -ne 0 ] ; then
 	echo "I:checking dnstap-read YAML output"
 	ret=0
 	$PYTHON ydump.py "$DNSTAPREAD" "ns3/dnstap.out.save" > /dev/null || ret=1
