@@ -130,6 +130,19 @@
     <itemizedlist>
       <listitem>
 	<para>
+	  <command>dnstap</command> logfiles can now be configured to
+	  automatically roll when they reach a specified size. If
+	  <command>dnstap-output</command> is configured with mode
+	  <literal>file</command>, then it can take optional
+	  <command>size</command> and <command>versions</command>
+	  key-value arguments to set the logfile rolling parameters.
+	  (These have the same semantics as the corresponding
+	  options in a <command>logging</command> channel statement.)
+	  [RT #44502]
+	</para>
+      </listitem>
+      <listitem>
+	<para>
 	  <command>dig +ednsopt</command> now accepts the names
 	  for EDNS options in addition to numeric values. For example,
 	  an EDNS Client-Subnet option could be sent using
